proof of concept for 3D visualization using mayavi, also works in documentation

--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -147,9 +147,8 @@ h6:hover .headerlink {
 
 /*format of code cells lastcout directive*/
 pre, code, blockquote {
-    font-family: "Source Code Pro";
-    font-size: 14px;  
-    line-height: 18px;
+    font-family: "Inconsolata";
+    font-size: 15px;  
 }
 
 blockquote {
