--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -206,60 +206,97 @@ code.xref.py.py-mod.docutils.literal {
     line-height: 36px;
 }
 
-
-div.sphx-glr-thumbContainer {
+.sphx-glr-thumbcontainer {
+  background: #fff;
+  border: solid #fff 1px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
   box-shadow: none;
-  background: #FFF;
+  float: left;
   margin: 5px;
-  padding-top: 5px;
   min-height: 230px;
-  border: solid white 1px;
+  padding-top: 5px;
+  position: relative;
+}
+.sphx-glr-thumbcontainer:hover {
+  border: solid #b4ddfc 1px;
+  box-shadow: 0 0 15px rgba(142, 176, 202, 0.5);
+}
+.sphx-glr-thumbcontainer a.internal {
+  bottom: 0;
+  display: block;
+  left: 0;
+  padding: 150px 10px 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.sphx-glr-thumbcontainer p {
+  margin: 0 0 .1em 0;
+}
+.sphx-glr-thumbcontainer .figure {
+  margin: 10px;
+  width: 160px;
+}
+.sphx-glr-thumbcontainer img {
+  display: inline;
+  max-height: 160px;
+  max-width: 100%;
+}
+.sphx-glr-thumbcontainer[tooltip]:hover:after {
+  background: rgba(0, 0, 0, 0.8);
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   border-radius: 5px;
-  float: left;
-  position: relative; }
-  div.sphx-glr-thumbContainer:hover {
-    box-shadow: 0 0 15px rgba(142, 176, 202, 0.5);
-    border: solid #B4DDFC 1px; }
-  div.sphx-glr-thumbContainer a.internal {
-    display: block;
-    position: absolute;
-    padding: 150px 10px 0px 10px;
-    top: 0px;
-    bottom: 0px;
-    left: 0px; }
-  div.sphx-glr-thumbContainer p {
-    margin: 0 0 .1em 0; }
-  div.sphx-glr-thumbContainer .figure {
-    margin: 10px;
-    width: 160px; }
-  div.sphx-glr-thumbContainer img {
-    max-width: 100%;
-    max-height: 160px;
-    display: inline; }
-  div.sphx-glr-thumbContainer[tooltip]:hover:after {
-    background: rgba(0, 0, 0, 0.8);
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    color: white;
-    content: attr(tooltip);
-    left: 95%;
-    padding: 5px 15px;
-    position: absolute;
-    z-index: 98;
-    width: 220px;
-    bottom: 52%; }
-  div.sphx-glr-thumbContainer[tooltip]:hover:before {
-    content: "";
-    position: absolute;
-    z-index: 99;
-    border: solid;
-    border-color: #333 transparent;
-    border-width: 18px 0px 0px 20px;
-    left: 85%;
-    bottom: 58%; }
+  color: #fff;
+  content: attr(tooltip);
+  left: 95%;
+  padding: 5px 15px;
+  position: absolute;
+  z-index: 98;
+  width: 220px;
+  bottom: 52%;
+}
+.sphx-glr-thumbcontainer[tooltip]:hover:before {
+  border: solid;
+  border-color: #333 transparent;
+  border-width: 18px 0 0 20px;
+  bottom: 58%;
+  content: '';
+  left: 85%;
+  position: absolute;
+  z-index: 99;
+}
+
+.highlight-pytb pre {
+  background-color: #ffe4e4;
+  border: 1px solid #f66;
+  margin-top: 10px;
+  padding: 7px;
+}
+
+.sphx-glr-script-out {
+  color: #888;
+  margin: 0;
+}
+.sphx-glr-script-out .highlight {
+  background-color: transparent;
+  margin-left: 2.5em;
+  margin-top: -1.4em;
+}
+.sphx-glr-script-out .highlight pre {
+  background-color: #fafae2;
+  border: 1px dashed;
+  max-height: 30em;
+  overflow: auto;
+  padding-left: 1ex;
+  margin: 0px;
+  word-break: break-word;
+}
+.sphx-glr-script-out + p {
+  margin-top: 1.8em;
+}
 
 div.highlight-python pre a {
     font-weight: bold;
@@ -291,6 +328,18 @@ ul.sphx-glr-horizontal {
     display: inline; }
   ul.sphx-glr-horizontal img {
     height: auto !important; }
+
+.sphx-glr-download.container {
+    box-shadow: 0px 0px 0px;
+    padding: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #3A87AD;
+    background-color: #D9EDF7;
+    border-color: #BCE8F1;
+}
 
 /*Display >>> toggle button in small code examples*/
 span.copybutton {
