--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -33,7 +33,7 @@ input,
 button,
 select,
 textarea {
-    font-family: "Fira Sans"
+    font-family: "Roboto"
 }
 
 
@@ -100,7 +100,7 @@ img.align-center {
 }
 /*header format*/
 h1, h2, h3, h4, h5, h6 {
-    font-family: "Fira Sans", sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 500;
     margin: 0;
     padding: 0.7em 0 0.5em 0em;
@@ -503,11 +503,18 @@ p.admonition-title {
 }
 
 .navbar .nav>li>a {
+    font-family: Roboto;
     float: none;
     padding: 15px 15px 0px;
     color: #777777;
     text-decoration: none;
     text-shadow: 0 1px 0 #ffffff;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
+}
+
+.logo img {
+    max-width: 50%;
+    margin-bottom: -20px;
+    margin-top: 15px;
 }
