minor colorbar tweaks and fixes

--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -21,7 +21,7 @@ padding-left: 10px;
 }
 
 body {
-    font-family: "Fira Sans", sans-serif;
+    /*font-family: "Fira Sans", sans-serif;*/
     font-size: 15px;
     font-weight: 400;
     line-height: 21px;
