switched to open sans font for web backend

--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -21,6 +21,7 @@ padding-left: 10px;
 }
 
 body {
+    font-family: "Open Sans", sans-serif;
     /*font-family: "Fira Sans", sans-serif;*/
     font-size: 15px;
     font-weight: 400;
