hard code logo size (still responsive enough), fixes IE issue #42

--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -525,8 +525,8 @@ p.admonition-title {
 }
 
 .logo img {
-    max-width: 50%;
-    height: auto !important;
+    width: 500px;
+    height: 150px;
     margin-bottom: -20px;
     margin-top: 15px;
 }
