--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -198,7 +198,16 @@ pre, code, blockquote {
 }
 
 /*API module headers*/
-code, span.pre {
+
+code.descname, code.descclassname, code.xref.py.py-mod.docutils.literal, code.xref.py.py-obj.docutils.literal {
+    padding: 1px 1px;
+    color: #002b36;
+    white-space: nowrap;
+    background-color: transparent;
+    border: none;
+}
+
+span.pre {
     padding: 1px 1px;
     color: #002b36;
     white-space: nowrap;
@@ -307,10 +316,7 @@ div.highlight-python pre a {
     color: #0000ff;
     text-decoration: underline;
 }
-code.xref.py.py-mod.docutils.literal {
-    font-size: 17px;
-    line-height: 36px;
-}
+
 .sphx-glr-script-out pre {
     overflow-y: auto;
     max-height: 30em;
@@ -448,10 +454,13 @@ dl.class, dl.function, dl.method, dl.attribute {
 }
 .descname {
     font-family: monospace;
+    font-size: 14px;
 }
 dl.class em, dl.function em, dl.class big, dl.function big {
     font-weight: normal;
     font-family: monospace;
+    font-size: 14px;
+    font-style: normal;
 }
 dl.class dd, dl.function dd {
     padding: 10px;
