--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -333,17 +333,142 @@ ul.sphx-glr-horizontal li {
 ul.sphx-glr-horizontal img {
     height: auto !important;
 }
-.sphx-glr-download.container {
-    box-shadow: 0px 0px 0px;
-    padding: 10px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    color: #3A87AD;
-    background-color: #D9EDF7;
-    border-color: #BCE8F1;
+
+.sphx-glr-script-out .highlight pre {
+  background-color: #fafae2;
+  border: 0;
+  max-height: 30em;
+  overflow: auto;
+  padding-left: 1ex;
+  margin: 0px;
+  word-break: break-word;
 }
+.sphx-glr-script-out + p {
+  margin-top: 1.8em;
+}
+blockquote.sphx-glr-script-out {
+  margin-left: 0pt;
+}
+
+div.sphx-glr-footer {
+    text-align: center;
+}
+
+.sphx-glr-footer.container {
+    box-shadow: none;
+}
+
+div.sphx-glr-download {
+  display: inline-block;
+  margin: 1em auto 1ex 2ex;
+  vertical-align: middle;
+  box-shadow: none;
+}
+
+div.sphx-glr-download a {
+  background-color: #d9edf7;
+  background-image: linear-gradient(to top, #BCE8F1, #d9edf7);
+  border-radius: 4px;
+  border: 1px solid #bce8f1;
+  color: #3a87ad;
+  display: inline-block;
+  /* Not valid in old browser, hence we keep the line above to override */
+  display: table-caption;
+  font-weight: bold;
+  padding: 1ex;
+  text-align: center;
+}
+
+/* The last child of a download button is the file name */
+div.sphx-glr-download a span:last-child {
+    font-size: smaller;
+}
+
+@media (min-width: 20em) {
+    div.sphx-glr-download a {
+	min-width: 10em;
+    }
+}
+
+@media (min-width: 30em) {
+    div.sphx-glr-download a {
+	min-width: 13em;
+    }
+}
+
+@media (min-width: 40em) {
+    div.sphx-glr-download a {
+	min-width: 16em;
+    }
+}
+
+
+div.sphx-glr-download code.download {
+  display: inline-block;
+  white-space: normal;
+  word-break: normal;
+  overflow-wrap: break-word;
+  /* border and background are given by the enclosing 'a' */
+  border: none;
+  background: none;
+}
+
+div.sphx-glr-download a:hover {
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.1), 0 1px 5px rgba(0,0,0,.25);
+  text-decoration: none;
+  background-image: none;
+  background-color: #d9edf7;
+}
+
+code.xref.download.docutils.literal {
+    font-family: "Open Sans";
+    font-size: 14px;
+}
+
+ul.sphx-glr-horizontal {
+  list-style: none;
+  padding: 0;
+}
+ul.sphx-glr-horizontal li {
+  display: inline;
+}
+ul.sphx-glr-horizontal img {
+  height: auto !important;
+}
+
+p.sphx-glr-signature a.reference.external {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 3px;
+  font-size: 75%;
+  text-align: right;
+  margin-left: auto;
+  display: table;
+}
+
+a.sphx-glr-code-links:hover{
+    text-decoration: none;
+}
+
+a.sphx-glr-code-links[tooltip]:hover:before{
+    background: rgba(0,0,0,.8);
+    border-radius: 5px;
+    color: white;
+    content: attr(tooltip);
+    padding: 5px 15px;
+    position: absolute;
+    z-index: 98;
+    width: 16em;
+    word-break: normal;
+    white-space: normal;
+    display: inline-block;
+    text-align: center;
+    text-indent: 0;
+    margin-left: 0; /* Use zero to avoid overlapping with sidebar */
+    margin-top: 1.2em;
+}
+
 
 /*Display >>> toggle button in small code examples*/
 span.copybutton {
