--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -16,8 +16,8 @@ ul {
     -webkit-box-shadow: 2px 0 10px #aaa, -2px 0 10px #aaa;
 }
 body {
-    font-family: "Open Sans", sans-serif;
-    /*font-family: "Fira Sans", sans-serif;*/
+    /* font-family: "Open Sans", sans-serif; */
+    font-family: "Fira Sans", sans-serif;
     font-size: 15px;
     font-weight: 400;
     line-height: 21px;
@@ -423,7 +423,7 @@ div.sphx-glr-download a:hover {
 }
 
 code.xref.download.docutils.literal {
-    font-family: "Open Sans";
+    font-family: "Fira Sans";
     font-size: 14px;
 }
 
@@ -588,6 +588,10 @@ dl.class em, dl.function em, dl.class big, dl.function big {
     font-size: 14px;
     font-style: normal;
 }
+dl.class, dl.function {
+  font-size: 14px;
+}
+
 dl.class dd, dl.function dd {
     padding: 10px;
 }
@@ -605,8 +609,8 @@ dl.class dd, dl.function dd {
 }
 .docutils.field-list td blockquote p {
     font-size: 14px;
-    font-family: "Open Sans";
-    /*font-family: "Fira Sans";*/
+    /* font-family: "Open Sans"; */
+    font-family: "Fira Sans";
     line-height: 18px;
     font-weight: normal;
 }
@@ -670,4 +674,9 @@ img.wrap-fig {
 .alert-success a {
   color: #468847;
   font-weight: bold;
+}
+
+table.docutils.field-list {
+    font-size: 14px;
+    line-height: 10px;
 }
