--- a/doc/_themes/gimli/static/gimli.css
+++ b/doc/_themes/gimli/static/gimli.css
@@ -603,6 +603,15 @@ dl.class, dl.function {
 dl.class dd, dl.function dd {
     padding: 10px;
 }
+dl.class dd, dl.function dd {
+    margin-left: 10px;
+    padding: 5px 0px 0px 0px;
+}
+
+dl.class dt, dl.function dt {
+    margin-left: 10px;
+    padding: 5px 0px 0px 0px;
+}
 .docutils.field-list th {
     background-color: #eee;
     font-weight: 500;
@@ -611,11 +620,7 @@ dl.class dd, dl.function dd {
     vertical-align: top;
     width: 100px;
 }
-.docutils.field-list td {
-    padding: 10px 10px 10px 20px;
-    text-align: left;
-    vertical-align: top;
-}
+
 .docutils.field-list td blockquote p {
     font-size: 14px;
     /* font-family: "Open Sans"; */
